# OpenFEA

./: .gitignore  CMakeLists.txt  README.md
CA_demo/src/: ca_analysis.cpp  main.cpp
CA_demo/src/elements/: C3D8.cpp
CA_demo/src/elements/include/: C3D8.h
CA_demo/src/include/: Factory.h  cae.h  elastic_mat.h
CA_demo/src/solver/include/: solver_superlu.h
NL_FEA_demo/: fem_geo_nl.py  nl_fem.py  read_inp.py
NL_FEA_demo/geo_nonlinear_fem/: fem_geo_nl.py
model/: Job-1.inp  mix_ele_model.inp
model/mix_ele_model/bracket_name_17/: bracket_name_17.STEP
model/mix_ele_model/shaft_bracket/: Abaqus_U.txt  Job-1.inp  Shaft Bracket.STEP  dis_with_error.vtk  shaft_bracket.cae
other_code/CA_demo/src/: CMakeLists.txt  assemble.cpp  ca_analysis.cpp  cae.cpp  data2vtk.cpp  data_managrment.cpp  main.cpp  stress.cpp
other_code/CA_demo/src/include/: NCF_map.h  assemble.h  ca_reanalysis.h  cae.h  data2cae.h  data_management.h  linear_solution.h  stress.h
other_code/CA_demo/src/solver/include/: solver_pardiso.h
other_code/NL_FEA_demo/: nl_fem.py  show_result.py
other_code/SFEM_demo/src/: SFEM3D.cpp  SurfaceNode.cpp  assemble.cpp  cae.cpp  linear.solution.cpp  main.cpp
other_code/SFEM_demo/src/Elements/: C3D8_Gauss.cpp  SFEM_C3D4.cpp
other_code/SFEM_demo/src/Elements/include/: C3D4.h  C3D8_Gauss.h  ele_base.h
other_code/SFEM_demo/src/include/: SFEM3D.h  assemble.h  cae.h  data2cae.h
sample_model/: Job-1.inp  NLFEA.inp  read_vms_dis.py
sample_model/CA/: CA_info_cae.txt  CA_test_modefy.inp  CA_zongliang.inp  CA_zongliang.vtk  cadcae_ca.vtk  cadcae_ca_cae.vtk  cadcae_o.vtk  cadcae_o_cae.vtk  mesh_m.inp  mesh_m1.inp  mesh_m_cae.inp  mesh_o.inp  mesh_o_cae.inp
sample_model/test/: implicite_test_C3D4_C3D8.inp  implicite_test_C3D4_C3D8.vtk
sample_model/非协调/: Job-c3d4-ele12k.inp
src/: .editorconfig  CMakeLists.txt  DataConvertor.cpp  ExplicitTools.cpp  NCF_map.cpp  Reader_fem.cpp  SFEM2D.cpp  SFEM3D.cpp  Sample_Eigen_Superlu.cpp  assemble.cpp  ca_analysis.cpp  cae.cpp  data2cae.cpp  data2vtk.cpp  data_managrment.cpp  elastic_ele.cpp  explicit_tools.cpp  linear.solution.cpp  linear_solution.cpp  main.cpp  nl_assemble.cpp  post_process.cpp  sample_eigen_superlu.cpp  sample_eigen_superlu_mkl.cpp  sample_eigen_superlu_mkl_svd.cpp  set_bc.cpp  solver_linear.cpp
src/Elements/: C3D3.cpp  C3D4.cpp  C3D4.h  C3D4_hammer.cpp  C3D8.cpp  C3D8R.cpp  C3D8R.h  C3D8_Gauss.cpp  CQUAD4.cpp  CTRIA3.cpp  P3D4.cpp  P4.cpp  SFEM_C3D4.cpp  SFEM_T3.cpp  ele_base.h  main-test_lib.cpp
src/Elements/include/: C3D4.h  C3D4_hammer.h  C3D8.h  C3D8R.h  C3D8_Gauss.h  CQUAD4.h  CTRIA3.h  P3D4.h  P4.h  SFEM_C3D4.h  SFEM_T3.h  ele_base.h
src/include/: DataConvertor.h  ExplicitTools.h  Factory.h  NCF_map.h  Reader_fem.h  SFEM2D.h  SFEM3D.h  SupportForSFEM.h  SurfaceNode.h  assemble.h  ca_reanalysis.h  cae.h  data2cae.h  data2vtk.h  data_management.h  elastic_ele.h  element_base.h  explicit_tools.h  linear_solution.h  mat.h  nl_assemble.h  post_process.h  sample_eigen_superlu.h  sample_eigen_superlu_mkl.h  sample_eigen_superlu_mkl_svd.h  set_bcs.h  solver_linear.h
src/solver/: solver_pardiso.cpp  solver_superlu.cpp
src/solver/include/: solver_pardiso.h  solver_superlu.h
test_model/CA/: for_ca.cae  modefy.inp  original.inp
test_model/L_NL/: nlcae.inp
